# NLP-GPT-Facturas-Langchain

./: .gitignore  README.md  Untitled Diagram.drawio  pyproject.toml
data/val_data/: respuestas.json  respuestas1.json  respuestas2.json  respuestas3.json  respuestas4.json  respuestas5.json  respuestas6.json
notebook/: demoReto.ipynb  formato_salida.json  respuestas.json
py/: .openai_api_key  app.py  buscador_documentos.py  configuracion_logging.py  decoradores.py  formateador_respuestas.py  formato_salida.json  main.py  procesador_nlp.py  procesador_pdf.py  procesador_qa.py  respuestas.json  separador_texto.py
visualization/: diagrams_file.py
