[tool.poetry]
name = "decidesoluciones"
version = "0.1.0"
description = ""
authors = ["adrianinfantes <infantesromeroadrian@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.12"
openai = "0.28.0"
langchain = "^0.1.5"
pypdf2 = "^3.0.1"
jupyter = "^1.0.0"
jupyterlab = "^4.1.0"
mlflow = "^2.10.1"
tiktoken = "^0.5.2"
faiss-cpu = "^1.7.4"
streamlit = "^1.31.0"
diagrams = "^0.23.4"
data = "^0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
